@@ -476,8 +476,18 @@ and scope_fun s =
 
 (***************** generated ast nodes ****************)
 
-and translationUnit_fun 
-    ((annot, topForm_list, scope_opt) as x : annotated translationUnit_type) =
+and compilationUnit_fun
+    ((annot, name, tu) as x : annotated compilationUnit_type) =
+  if visited annot then ()
+  else begin
+    visit annot;
+    annotation_fun annot;
+    string_fun name;
+    translationUnit_fun tu
+  end
+      
+
+and translationUnit_fun (annot, topForm_list, scope_opt) =
   if visited annot then ()
   else begin
     visit annot;
